# osx_cleaner

./: .gitignore  .gitleaks.toml  .swiftlint.yml  Makefile  Package.resolved  Package.swift  README.kr.md  README.md  SECURITY.md  codecov.yml  project.yml
.github/: dependabot.yml
.github/workflows/: benchmarks.yml  ci.yml  memory-check.yml  release-gui.yml  release.yml  security.yml
.signing/: CI-SIGNING.md  README.md  env.template  exportOptions-appstore.plist  exportOptions-developer-id.plist
Sources/COSXCore/: module.modulemap
Sources/OSXCleanerGUI/: OSXCleanerApp.swift
Sources/osxcleaner/: OSXCleaner.swift  main.swift
Supporting/: Info.plist
Tests/OSXCleanerKitTests/: AgentRegistrationTests.swift  AnalyzerServiceTests.swift  AuditSystemTests.swift  AutomatedCleanupLoggingServiceTests.swift  CleanerServiceIntegrationTests.swift  CleanupSelectionTests.swift  CommandValidationTests.swift  ComplianceReporterTests.swift  ConfigValidatorTests.swift  ConfigurationTests.swift  DiskMonitoringServiceTests.swift  ErrorFormatterTests.swift  FFIErrorRecoveryTests.swift  FFIRoundTripTests.swift  FileOperationRetryTests.swift  JWTProviderSecurityTests.swift  MDMTests.swift  NetworkRetryPolicyTests.swift  PathValidatorTests.swift  PerformanceTests.swift  PolicyDistributorTests.swift  PolicySystemTests.swift  RBACTests.swift  RustBridgeMemoryTests.swift  RustBridgeRecoveryTests.swift  RustBridgeValidationTests.swift  SchedulerServiceTests.swift  ServerFleetCLITests.swift  ServerFoundationTests.swift  TeamConfigServiceTests.swift  TimeMachineServiceTests.swift  TokenStoreTests.swift
Tests/osxcleanerCLITests/: CleanCommandIntegrationTests.swift
docs/: APPSTORE.md  BENCHMARKING.md  CHANGELOG.md  CONTRIBUTING.md  ERROR_RECOVERY.md  INSTALLATION.md  PRD.kr.md  PRD.md  SAFETY.md  SDS.kr.md  SDS.md  SECURITY.md  SRS.kr.md  SRS.md  TESTING.md  TROUBLESHOOTING.md  USAGE.md  VALIDATION.md
docs/monitoring/: MONITORING.md  grafana-dashboard.json  prometheus.yml
docs/reference/: 01-temporary-files.kr.md  01-temporary-files.md  02-cache-system.kr.md  02-cache-system.md  03-system-logs.kr.md  03-system-logs.md  README.kr.md  (+14 more)
include/: osxcore.h
rust-core/: Cargo.toml  DEPENDENCIES.md  build.rs  cbindgen.toml  deny.toml
rust-core/.cargo/: config.toml
rust-core/benches/: analysis_bench.rs  ffi_bench.rs  safety_benchmark.rs
rust-core/src/: lib.rs
rust-core/src/analyzer/: categories.rs  cleanable.rs  disk_space.rs  mod.rs
rust-core/src/cleaner/: mod.rs
rust-core/src/developer/: docker.rs  mod.rs  packages.rs  simulator.rs  xcode.rs
rust-core/src/fs/: mod.rs
rust-core/src/logging/: mod.rs
rust-core/src/safety/: cloud.rs  level.rs  mod.rs  paths.rs  process.rs  validator.rs
rust-core/src/scanner/: mod.rs
rust-core/src/system/: architecture.rs  mod.rs  paths.rs  version.rs
rust-core/src/targets/: app_cache.rs  browser.rs  logs.rs  mod.rs
rust-core/tests/: ffi_memory_tests.rs  safety_integration_tests.rs
scripts/: build-xcframework.sh  compare-benchmarks.py  install.sh  track-benchmarks.sh  uninstall.sh
(+119 files in other folders)
