[package]
name = "osxcore"
version = "0.1.0"
edition = "2021"
rust-version = "1.75"
description = "Core engine for OSX Cleaner - file scanning, cleanup, and safety validation"
license = "BSD-3-Clause"

[lib]
name = "osxcore"
crate-type = ["staticlib", "cdylib", "rlib"]

[dependencies]
# Parallel processing
rayon = "1.8"

# Directory traversal
walkdir = "2.4"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Error handling
thiserror = "2.0"
anyhow = "1.0"

# Logging
log = "0.4"
env_logger = "0.11"

# System information
sysinfo = "0.38"

# Glob pattern matching
glob = "0.3"

# Home directory detection
dirs = "6.0"

# CPU count detection
num_cpus = "1.16"

[build-dependencies]
cbindgen = "0.29"

[dev-dependencies]
tempfile = "3.9"
criterion = { version = "0.8", features = ["html_reports"] }
filetime = "0.2"

[[bench]]
name = "safety_benchmark"
harness = false

[[bench]]
name = "analysis_bench"
harness = false

[[bench]]
name = "ffi_bench"
harness = false

[profile.release]
lto = true
codegen-units = 1
opt-level = 3
